--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,10 @@ project(kursach)
 
 set(CMAKE_CXX_STANDERD 17)
 
-add_executable(kursach
-	main.cpp
-	utils.h
-	utils.cpp
-)
+file(GLOB_RECURSE SOURCES
+        src/*.h
+        src/*.cpp
+        src/*.hpp
+        )
+add_executable(kursash ${SOURCES})
 
